--- a/templates/tree_data.html
+++ b/templates/tree_data.html
@@ -74,5 +74,8 @@
     <a href="{{ url_for('treeIdentifier') }}" style="margin-left:10px;">
         <button type="button">Back to Identify</button>
     </a>
+    <a href="{{ url_for('search') }}" style="margin-left:10px;">
+        <button type="button">Back to Search</button>
+    </a>
 {% endblock %}
 </html>
