--- a/templates/frontPage.html
+++ b/templates/frontPage.html
@@ -13,11 +13,11 @@
     <!-- Row of tree images for visual interest on the homepage -->
     <div class="tree-image-row">
         <!-- Cherry tree image, no border for a clean look -->
-        <img src="{{ url_for('static', filename='cherry_tree.jpeg') }}" alt="Cherry tree" class="tree-image no-border">
+        <img src="{{ url_for('static', filename='pink_dogwood.jpeg') }}" alt="Pink Dogwood tree" class="tree-image no-border">
         <!-- Dogwood tree image, no border -->
-        <img src="{{ url_for('static', filename='dogwood.jpeg') }}" alt="Dogwood tree" class="tree-image no-border">
+        <img src="{{ url_for('static', filename='dogwood_tree.jpeg') }}" alt="Dogwood tree" class="tree-image no-border">
         <!-- Mirrored cherry tree image for symmetry, no border -->
-        <img src="{{ url_for('static', filename='cherry_tree.jpeg') }}" alt="Cherry tree" class="tree-image no-border" style="transform: scaleX(-1);">
+        <img src="{{ url_for('static', filename='pink_dogwood.jpeg') }}" alt="Pink Dogwood tree" class="tree-image no-border" style="transform: scaleX(-1);">
     </div>
 
     <!-- Brief description of the Dogwood tree, centered and styled -->
