Updated autumn colors

--- a/templates/treeIdentifier.html
+++ b/templates/treeIdentifier.html
@@ -143,6 +143,7 @@
             <option value="purple" {% if user_description.leaf_autum == 'purple' %}selected{% endif %}>Purple</option>
             <option value="gold" {% if user_description.leaf_autum == 'gold' %}selected{% endif %}>Gold</option>
             <option value="evergreen" {% if user_description.leaf_autum == 'evergreen' %}selected{% endif %}>Evergreen</option>
+            <option value="unknown" {% if user_description.leaf_autum == 'unknown' %}selected{% endif %}>Unknown</option>
         </select><br><br>
 
         <!-- Submit and Reset buttons -->
