--- a/templates/base.html
+++ b/templates/base.html
@@ -176,6 +176,7 @@
             <a href="{{ url_for('treelist') }}" style="color: #fff; text-decoration: none; font-weight: bold;">Treelist</a>
             <a href="{{ url_for('browse') }}" style="color: #fff; text-decoration: none; font-weight: bold;">Browse</a>
             <a href="{{ url_for('search') }}" style="color: #fff; text-decoration: none; font-weight: bold;">Search</a>
+            <a href="{{ url_for('glossary') }}" style="color: #fff; text-decoration: none; font-weight: bold;">Glossary</a>
         </div>
     </nav>
     <!-- Main content area; child templates fill this block -->
